# rsmi_ld_preload

./: .clangd  CMakeLists.txt  README.md  main.cpp
functions/: CMakeLists.txt  functions.cpp
